--- a/index.html
+++ b/index.html
@@ -24,14 +24,23 @@
 
     </header>
 
+    <!-- <img src="1.png" class="cool_cat"> -->
+
     <div class="form">
-        <h3>Login Your Cool Cat ID</h3>
-        <input type="name" placeholder="Type Your Name" class="form_credentials">
-        <input type="email" placeholder="Type Your Mail" class="form_credentials">
-        <input type="password" placeholder="Type Your Password" class="form_credentials">
-        <input type="submit" value="Login" class="form_credentials" id="submit">
-        <a class="form_option" href="">Forgot Password?</a>
-        <a class="form_option" href="">Create New Account</a>
+        
+        <div class="items">
+            <h3>Login Your Cool Cat ID</h3>
+            <input type="name" placeholder="Type Your Name" class="form_credentials">
+            <input type="email" placeholder="Type Your Mail" class="form_credentials">
+            <input type="password" placeholder="Type Your Password" class="form_credentials">
+            <input type="submit" value="Login" class="form_credentials" id="submit">
+            <a class="form_option" href="">Forgot Password?</a>
+            <a class="form_option" href="">Create New Account</a>
+        </div>
+
+        <div class="items">
+        </div>
+
     </div>
     
 </body>
