--- a/info.html
+++ b/info.html
@@ -27,63 +27,63 @@
 
         <div class="para_items">
             <p>
-                <h2>1: Maine Cat</h2>
+                1: Maine Cat<br>
                 Known as the "gentle giant," Maine Coons are large cats with luxurious, shaggy fur and tufted ears. Their expressive eyes and bushy tails add to their majestic appearance. Affectionate and playful, they’re great companions and often dubbed the "dog of the cat world."
             </p>
         </div>
 
         <div class="para_items">
             <p>
-                <h2>2: Persian Cat</h2>
+                2: Persian Cat<br>
                 Famous for their silky long fur and flat faces, Persian cats exude elegance. They have large, round eyes in striking colors. Calm and sweet-natured, they prefer a serene environment and enjoy being pampered. Their luxurious coats require regular grooming.
             </p>
         </div>
 
         <div class="para_items">
             <p>
-                <h2>3: Bengal Cat</h2>
+                3: Bengal Cat<br>
                 Bengals have a stunning, leopard-like spotted coat that sets them apart. Athletic and energetic, they are highly playful and love climbing. Their shiny, sleek fur often has a glittery effect. Bengals combine exotic looks with affectionate and intelligent personalities.
             </p>
         </div>
 
         <div class="para_items">
             <p>
-                <h2>4: Siberian Cat</h2>
+                4: Siberian Cat<br>
                 Siberian cats boast a thick, triple-layered coat designed for harsh winters. Their round faces, large eyes, and fluffy tails make them irresistibly cute. Friendly and affectionate, they are also known for being hypoallergenic, making them popular among allergy sufferers.
             </p>
         </div>
 
         <div class="para_items">
             <p>
-                <h2>5: Ragdoll</h2>
+                5: Ragdoll<br>
                 Ragdolls are large, fluffy cats with captivating blue eyes and soft, plush coats. Known for their relaxed and affectionate demeanor, they often go limp when picked up. They are gentle and enjoy cuddles, making them ideal for families.
             </p>
         </div>
 
         <div class="para_items">
             <p>
-                <h2>6: Scottish Fold</h2>
+                6: Scottish Fold<br>
                 These adorable cats are recognized by their unique folded ears and round faces. Scottish Folds have soft fur and come in various colors. Playful yet calm, they bond closely with their owners and enjoy interactive play sessions.
             </p>
         </div>
 
         <div class="para_items">
             <p>
-                <h2>7: Abyssinian</h2>
+                7: Abyssinian<br>
                 With their ticked, short-haired coat, Abyssinians have a radiant and wild appearance. Their almond-shaped eyes and large ears enhance their exotic look. These active, intelligent cats love exploring and playing, making them one of the most energetic breeds.
             </p>
         </div>
 
         <div class="para_items">
             <p>
-                <h2>8: Norwegian Forest Cat</h2>
+                8: Norwegian Forest Cat<br>
                 Native to Norway, these cats have a thick, water-resistant coat and a fluffy tail. Their almond-shaped eyes and pointed ears give them a fairy-tale look. Affectionate yet independent, they’re skilled climbers and enjoy outdoor adventures.
             </p>
         </div>
 
         <div class="para_items">
             <p>
-                <h2>9: Siamese Cat</h2>
+                9: Siamese Cat<br>
                 Siamese cats are sleek with a striking color-point coat and mesmerizing blue eyes. Their short fur is soft and easy to care for. Highly vocal and sociable, they love interacting with their owners and are known for their curious nature.
             </p>
         </div>
